objects/DeliveryRestrictedPaymentMethods__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Sales Channel (ej, Agentes)</description>
        <label>Channel</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryService__c</fullName>
        <description>Delivery Type (Express, Standard, etc)</description>
        <label>DeliveryService</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>Sale operation</description>
        <label>Operation</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <description>(Tarjeta, Efectivo, DPF, etc)</description>
        <label>PaymentMethod</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DeliveryRestrictedPaymentMethods</label>
</CustomObject>